syntax = "proto3";

import "google/protobuf/duration.proto";

package target;

option go_package = "server.v1;grpc";

service TargetService {
  rpc Hello(HelloRequest) returns (HelloResponse);
  rpc Auth(AuthRequest) returns (AuthResponse);
  rpc List(ListRequest) returns (ListResponse);
  rpc Order(OrderRequest) returns (OrderResponse);
  rpc Stats(StatsRequest) returns (StatsResponse);
  rpc Reset(ResetRequest) returns (StatsResponse);
}

message HelloRequest {
  string name = 1;
  bool skipStats = 2;
  google.protobuf.Duration sleep = 3;
}

message HelloResponse {
  string hello = 1;
}
message AuthRequest {
  string login = 1;
  string pass = 2;
}

message AuthResponse {
  int64 user_id = 1;
  string token = 2;
}

message ListRequest {
  string token = 1;
  int64 user_id = 2;
}

message ListResponse {
  repeated ListItem result = 1;
}

message ListItem {
  int64 item_id = 1;
}

message OrderRequest {
  string token = 1;
  int64 user_id = 2;
  int64 item_id = 3;
}

message OrderResponse {
  int64 order_id = 1;
}

message ResetRequest {}

message StatsRequest {}

message StatsResponse {
  StatisticBodyResponse Auth = 1;
  StatisticBodyResponse List = 2;
  StatisticBodyResponse Order = 3;
  int64 Hello = 4;
}

message StatisticBodyResponse  {
  map<int64, uint64> Code200 = 1;
  uint64 Code400 = 2;
  uint64 Code500 = 3;
}




